--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -2,7 +2,6 @@
   <% if group.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(group.errors.count, "error") %> prohibited this group from being saved:</h2>
-
       <ul>
         <% group.errors.each do |error| %>
           <li><%= error.full_message %></li>
@@ -10,32 +9,16 @@
       </ul>
     </div>
   <% end %>
-
   <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
   </div>
-
   <div class="field">
     <%= form.label :icon %>
-    <%= form.number_field :icon %>
+    <%= form.text_field :icon %>
   </div>
-
-  <div class="field">
-    <%= form.label :created_at %>
-    <%= form.datetime_select :created_at %>
-  </div>
-
-  <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :entity %>
-    <%= form.text_field :entity %>
-  </div>
-
+  <%= hidden_field_tag 'text_field', current_user.id  %>
+  <%= hidden_field_tag 'text_field', nil  %>
   <div class="actions">
     <%= form.submit %>
   </div>
