--- a/app/assets/stylesheets/partials/entities.scss
+++ b/app/assets/stylesheets/partials/entities.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the Entities controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.table {
+    background-color: rgb(223, 223, 223);
+    padding: 2%;
+    border-radius: 4px;    
+}
