--- a/app/assets/stylesheets/partials/main.scss
+++ b/app/assets/stylesheets/partials/main.scss
@@ -67,6 +67,14 @@ nav {
   border-radius: 2px !important;
 }
 
+.btn-success {
+  color: white !important;
+}
+
+.btn-danger {
+  color: white !important;
+}
+
 .btn-login {
   width: 100% !important;
   color: white !important;
