--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -11,11 +11,11 @@
   <% end %>
   <div class="field">
     <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, required: true %>
   </div>
   <div class="field">
     <%= form.label :icon %>
-    <%= form.text_field :icon %>
+    <%= form.text_field :icon, required: true %>
   </div>
   <%= hidden_field_tag 'text_field', current_user.id  %>
   <%= hidden_field_tag 'text_field', nil  %>
