--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,28 +1,18 @@
 <p id="notice"><%= notice %></p>
-<h1>Groups</h1>
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Icon</th>
-      <th>Created at</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @groups.each do |group| %>
-      <tr>
-        <td><%= group.name %></td>
-        <td><%= group.icon %></td>
-        <td><%= group.created_at %></td>
-        <td><%= group.user_id %></td>
-        <td><%= link_to 'Show', group %></td>
-        <td><%= link_to 'Edit', edit_group_path(group) %></td>
-        <td><%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<section class="groups">
+  <h1>Groups</h1>
+  <% @groups.each do |group|%>
+    <%= link_to  group_path(group.id), class: 'card-link' do %>
+      <div class="card-group">
+        <img src='<%=  group.icon %>' alt="logo">
+        <div class="card-center">
+          <h5><%= group.name %></h5>
+          <h6><%= group.created_at %></h6>
+        </div>
+        <div class="h4"> <%= group.total %> $</div>
+      </div>
     <% end %>
-  </tbody>
-</table>
-<br>
-<%= link_to 'New Group', new_group_path %>
+  <% end %>
+  <br>
+  <%= link_to 'Add new category', new_group_path, class: 'btn btn-success' %>
+</section>
