--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: group) do |form| %>
   <% if group.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(group.errors.count, "error") %> prohibited this group from being saved:</h2>
+      <h2><%= pluralize(group.errors.count, "error") %> prohibited this budget from being saved:</h2>
       <ul>
         <% group.errors.each do |error| %>
           <li><%= error.full_message %></li>
