--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,3 +1,3 @@
-<h1>New Group</h1>
+<h1>New Budget</h1>
 <%= render 'form', group: @group %>
 <%= link_to 'Back', groups_path , class:"btn btn-danger" %>
