--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -13,7 +13,7 @@
             <%= link_to 'My Spenses', entities_path, class: "nav-link #{'active' if request.path == '/entities' }" %>
           </li>
           <li class="nav-item">
-            <%= link_to 'My Groups', root_path, class: "nav-link #{'active' if request.path == '/' }" %>
+            <%= link_to 'My Budgets', root_path, class: "nav-link #{'active' if request.path == '/' }" %>
           </li>
         </ul>
         <ul class='navbar-nav ml-auto'>
