--- a/app/assets/stylesheets/partials/main.scss
+++ b/app/assets/stylesheets/partials/main.scss
@@ -1,7 +1,41 @@
+$blue: #3778c2;
+$green: #5fb523;
+$gray: #434b54;
+
+.nav-link,
+.navbar-light .navbar-nav .nav-link.active {
+  background-color: transparent !important;
+}
 
 .main {
+  padding-left: 0%;
+  padding-right: 0%;
+
+  .top-title {
+    display: grid;
+    min-height: 80px;
+    background-color: $blue;
+    margin-top: -1rem;
+    padding-top: 20px;
+    text-align: center;
+    color: white;
+    margin-bottom: -20px;
+
+    h1 {
+      align-self: center !important;
+      margin-bottom: unset !important;
+    }
+  }
+}
+
+.page {
   padding-left: 5%;
   padding-right: 5%;
+  height: 100vh;
+  display: grid !important;
+  grid-template-rows: 15% auto 10%;
+  grid-row-gap: 5%;
+  padding-top: 10%;
 }
 
 .profiler-results {
@@ -49,6 +83,7 @@ nav {
 .mb-3 {
   display: grid;
   width: 200px;
+  max-height: 80px !important;
 }
 
 .landing {
@@ -66,14 +101,25 @@ nav {
 
 .btn {
   border-radius: 2px !important;
+  max-height: 40px !important;
+  width: 90%;
+  margin-left: 5%;
 }
 
 .btn-success {
   color: white !important;
+  background-color: $green !important;
+}
+
+.btn-primary {
+  color: white !important;
+  background-color: $blue !important;
 }
 
 .btn-danger {
   color: white !important;
+  align-self: end !important;
+  width: 90%;
 }
 
 .btn-login {
@@ -83,4 +129,24 @@ nav {
 
 .btn-signup {
   width: 100% !important;
+}
+
+// Forms
+
+.field {
+  display: grid;
+  grid-template-columns: 20% 80%;
+}
+
+.action {
+  display: grid;
+  grid-row-gap: 15%;
+
+  .btn-success {
+    grid-row-start: 1;
+  }
+
+  .btn-danger {
+    grid-row-start: 2;
+  }
 }
