--- a/app/views/entities/new.html.erb
+++ b/app/views/entities/new.html.erb
@@ -1,3 +1,7 @@
-<h1>New Entity</h1>
-<%= render 'form', entity: @entity %>
-<%= link_to 'Back', entities_path , class:"btn btn-danger"  %>
+<div class="top-title">
+  <h1>New Spense</h1>
+</div>
+<div class="entity-form">
+  <%= render 'form', entity: @entity %>
+  <%= link_to 'Back', entities_path , class:"btn btn-danger"  %>
+</div>
