--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,3 +1,5 @@
-<h1>New Budget</h1>
+<div class="top-title">
+  <h1>New Budget</h1>
+</div>
 <%= render 'form', group: @group %>
 <%= link_to 'Back', groups_path , class:"btn btn-danger" %>
