--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -21,8 +21,7 @@
             <%= fa_icon 'user' %> <%= current_user.name %>
           </li>
           <li class='nav-item'>
-            <%= link_to("Logout", destroy_user_session_path,
-                            class: "btn btn-danger logout-button", method: :delete)%>
+            <%= button_to 'Logout', destroy_user_session_path, class: "btn btn-danger logout-button", method: :delete %>
           </li>
         </ul>
       </div>
