--- a/app/assets/stylesheets/partials/entities.scss
+++ b/app/assets/stylesheets/partials/entities.scss
@@ -39,13 +39,8 @@
   .mb3 {
     grid-template-rows: 20px auto !important;
   }
+}
 
-  .actions {
-    width: 90%;
-    margin-left: unset;
-
-    .btn {
-      width: 100%;
-    }
-  }
+.new-spense {
+  margin-bottom: 40px;
 }
