--- a/app/views/entities/_form.html.erb
+++ b/app/views/entities/_form.html.erb
@@ -24,7 +24,7 @@
 </div>
 <%= hidden_field_tag 'text_field', current_user.id  %>
 <%= hidden_field_tag 'text_field', nil  %>
-<div class="actions">
-  <%= button_to "New", {action: "create"}, { class:"btn btn-success" }  %>
-</div>
+
+  <%= button_to "New", {action: "create"}, { class:"btn btn-success new-spense" }  %>
+
 <% end %>
